charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: test-node
  name: test-node
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: web
  selector:
    run: test-node
