charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-node-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - hazembenhassine.me
      secretName: tls-cert
  rules:
    - host: hazembenhassine.me
      http:
        paths:
          - path: /node
            pathType: Prefix
            backend:
              service:
                name: test-node
                port:
                  number: 80
